[tool.poetry]
name = "plateiq-oauth-example"
version = "0.1.0"
description = ""
authors = ["Kyle Johnson <kyle@plateiq.com>"]
readme = "README.md"
packages = [{include = "plateiq_oauth_example"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
